fix: japanese text overflowing

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -173,6 +173,7 @@
 #donation-button {
   cursor: pointer;
   flex: 0;
+  white-space: nowrap;
   margin-top: 25px;
   text-decoration: none;
   text-align: center;
