--- a/src/styles/pages/collection.scss
+++ b/src/styles/pages/collection.scss
@@ -213,6 +213,7 @@
       & > label,
       & > select {
         font: inherit;
+        white-space: nowrap;
         color: #fff;
         text-shadow:
           -1px -1px 0 #000,
