--- a/src/styles/pages/create.scss
+++ b/src/styles/pages/create.scss
@@ -21,6 +21,7 @@
       & > label,
       & > select {
         font: inherit;
+        white-space: nowrap;
         color: #fff;
         text-shadow:
           -1px -1px 0 #000,
