--- a/src/styles/renderer-styles.scss
+++ b/src/styles/renderer-styles.scss
@@ -50,7 +50,7 @@ dialog {
       & > .dialog-buttons {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: stretch;
         gap: 0.5rem;
 
         & > button {
